# Axionetd

./: .gitignore  README.md  base  base.c  makefile
include/: axionetd.h  config.h  defaultRoutes.h  http.h  json.h  memory-pool.h  router.h  threading.h
python-wrapper/: pyproject.toml
python-wrapper/axionet/: __init__.py  lib.py  server.py
python-wrapper/axionet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-wrapper/axionet/definitions/: constants.py  http.py  server.py
python-wrapper/examples/: test.py
src/: defaultRoutes.c  http.c  json.c  memory-pool.c  router.c  server.c
